[gd_scene load_steps=10 format=2]

[ext_resource path="res://other/bauhaus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://textures/background.png" type="Texture" id=2]
[ext_resource path="res://scripts/camera.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[node name="Camera" type="Camera2D"]
position = Vector2( 500, 300 )
z_index = 2
current = true
script = ExtResource( 3 )

[node name="Options" type="Control" parent="."]
margin_left = -490.0
margin_top = -290.0
margin_right = -490.0
margin_bottom = -225.0

[node name="FPS" type="Label" parent="Options"]
margin_bottom = 28.0
custom_fonts/font = SubResource( 3 )

[node name="Cell" type="Label" parent="Options"]
margin_top = 38.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )

[node name="Food" type="Label" parent="Options"]
margin_top = 76.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )

[node name="Setings" type="Control" parent="."]
margin_left = -490.0
margin_top = 212.0
margin_right = -326.0
margin_bottom = 290.0

[node name="Music" type="Button" parent="Setings"]
margin_right = 164.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 8 )
text = "Music (On/Off)"

[node name="Reset" type="Button" parent="Setings"]
margin_top = 44.0
margin_right = 164.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 8 )
text = "Reset"

[node name="RightPanel" type="Control" parent="."]
margin_left = 190.0
margin_top = -290.0
margin_right = 490.0
margin_bottom = 290.0

[node name="Background" type="Sprite" parent="RightPanel"]
position = Vector2( 150, 290 )
scale = Vector2( 300, 580 )
texture = ExtResource( 2 )

[node name="Lable" type="Label" parent="RightPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "Characteristic:"
align = 1
valign = 1

[node name="Characteristic" type="Control" parent="RightPanel"]
margin_right = 300.0
margin_bottom = 426.0

[node name="Energy" type="Label" parent="RightPanel/Characteristic"]
margin_left = 4.0
margin_top = 42.0
margin_right = 296.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 4 )
valign = 1

[node name="Age" type="Label" parent="RightPanel/Characteristic"]
margin_left = 4.0
margin_top = 80.0
margin_right = 296.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 4 )
valign = 1

[node name="Scale" type="Label" parent="RightPanel/Characteristic"]
margin_left = 4.0
margin_top = 118.0
margin_right = 296.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 4 )
valign = 1

[node name="Speed" type="Label" parent="RightPanel/Characteristic"]
margin_left = 4.0
margin_top = 156.0
margin_right = 296.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 4 )
valign = 1

[node name="EnergyForDivision" type="Label" parent="RightPanel/Characteristic"]
margin_left = 4.0
margin_top = 194.0
margin_right = 296.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 4 )
valign = 1

[node name="Generation" type="Label" parent="RightPanel/Characteristic"]
margin_left = 4.0
margin_top = 232.0
margin_right = 296.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 4 )
valign = 1

[node name="Behavior" type="Label" parent="RightPanel/Characteristic"]
margin_left = 4.0
margin_top = 270.0
margin_right = 296.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 4 )
valign = 1

[node name="SettingsEvolution" type="Control" parent="RightPanel"]
margin_top = 436.0
margin_right = 300.0
margin_bottom = 580.0

[node name="Lable" type="Label" parent="RightPanel/SettingsEvolution"]
margin_left = 4.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 6 )
text = "Food spawn interval"
align = 1
valign = 1

[node name="FoodSpawnInterval" type="LineEdit" parent="RightPanel/SettingsEvolution"]
margin_left = 4.0
margin_top = 42.0
margin_right = 296.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "1"
align = 1
max_length = 4
placeholder_text = "Enter the number"

[node name="Apply" type="Button" parent="RightPanel/SettingsEvolution"]
margin_left = 110.0
margin_top = 90.0
margin_right = 190.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 7 )
text = "Apply"

[connection signal="pressed" from="Setings/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Setings/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="RightPanel/SettingsEvolution/Apply" to="." method="_on_Apply_pressed"]
